--- a/screens/home.html
+++ b/screens/home.html
@@ -11,6 +11,9 @@
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="../styles/home-styles.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
@@ -18,5 +21,73 @@
     ></script>
     <title>Norwich Heritage Tours - Home</title>
   </head>
-  <body></body>
+  <body>
+    <nav class="navbar navbar-expand-lg bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+          <img src="../assets/images/logo.png" alt="Logo" width="25" height="30" class="d-inline-block align-text-top">
+          Norwich Heritage Tours
+        </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link" href="#">Features</a>
+            <a class="nav-link" href="#">Pricing</a>
+            <a class="nav-link disabled">Disabled</a>
+          </div>
+        </div>
+      </div>
+    </nav>
+    <div class="container">
+      <div class="row welcome-text">
+        <h2>Welcome to Norwich Heritage Tours</h2>
+        <h3>Select an option</h3>
+      </div>
+      <div class="row home-main-content">
+        <div class="col-md-3 col-sm-6 col-6 home-columns">
+          <button class="home-button">
+            <span class="material-icons">
+              tour
+              </span>
+            <h5>Tours</h5>
+          </button>
+        </div>
+        <div class="col-md-3 col-sm-6 col-6 home-columns">
+          <button class="home-button">
+            <span class="material-icons">
+              collections
+              </span>
+            <h5>Site Gallery</h5>
+          </button>
+        </div>
+        <div class="col-md-3 col-sm-6 col-6 home-columns">
+          <button class="home-button">
+            <span class="material-icons">
+              map
+              </span>
+            <h5>Map</h5>
+          </button>
+        </div>
+        <div class="col-md-3 col-sm-6 col-6 home-columns">
+          <button class="home-button">
+            <span class="material-icons">
+              more_horiz
+              </span>
+            <h5>More</h5>
+          </button>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
