--- a/screens/home.html
+++ b/screens/home.html
@@ -12,6 +12,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="../styles/home-styles.css">
+    <link rel="stylesheet" href="../styles/global-styles.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
     <script
@@ -19,12 +20,13 @@
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
       crossorigin="anonymous"
     ></script>
+    <script src="../home.js"></script>
     <title>Norwich Heritage Tours - Home</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="home.html">
           <img src="../assets/images/logo.png" alt="Logo" width="25" height="30" class="d-inline-block align-text-top">
           Norwich Heritage Tours
         </a>
@@ -50,7 +52,7 @@
       </div>
     </nav>
     <div class="container">
-      <div class="row welcome-text">
+      <div class="row title-text">
         <h2>Welcome to Norwich Heritage Tours</h2>
         <h3>Select an option</h3>
       </div>
@@ -64,7 +66,7 @@
           </button>
         </div>
         <div class="col-md-3 col-sm-6 col-6 home-columns">
-          <button class="home-button">
+          <button id="gallery-button" class="home-button" onclick="siteGalleryScreen()">
             <span class="material-icons">
               collections
               </span>
