Implemented heritage site screen layout

--- a/screens/site-gallery.html
+++ b/screens/site-gallery.html
@@ -21,6 +21,7 @@
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
       crossorigin="anonymous"
     ></script>
+    <script src="../site-gallery.js"></script>
     <title>Norwich Heritage Tours - Site Gallery</title>
   </head>
   <body>
@@ -69,11 +70,13 @@
       </div>
       <div class="row">
         <div class="col-md-3 col-sm-6 col-6 site-gallery-images">
-          <img
+          <a onclick="showSiteDetails()">
+            <img
             src="https://picsum.photos/200"
             class="img-fluid gallery-image"
             alt="Responsive image"
           />
+          </a>
         </div>
         <div class="col-md-3 col-sm-6 col-6 site-gallery-images">
           <img
